--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     </script>
 
     <script type="text/javascript" src="public/app.vendors.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.2.0/ember.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember-data.js/0.13.0/ember-data-latest.min.js"></script>
+    <script type="text/javascript" src="js/libs/ls_adapter.js"></script>
     <script type="text/javascript" src="public/application.min.js"></script>
   </body>
 </html>
